Se corrige uso de metodo que no existe en JDK de Openshift